    - Changed configure_sprite_status_bar API routine format to account for the new sprite status bar items.
    - Removed !lives_overflow_fix settings: it is now always enabled.
    - Finalized documentation (thanks to AmperSam for the huge help).

v0.7.4:
    - Fixed get_sram_variable_address api routine wrong result if it was called from a different bank.
    - Fixed Mario's walking pose being glitched sometimes after a level reload, which was introduced in v0.6.2 (thanks to mmBeefStew for reporting this).

v0.7.3:
    - Added !8x8_item_box_tile option to have an 8x8 tile instead of a 16x16 tile for the sprite status bar item box (thanks to AmperSam for the gfx).
    - Fixed game crash if patching the infinite lives hex edit after inserting Retry.

v0.7.2:
    - Updated "library/retry.asm" and "gamemode/retry_gm14.asm" files, which I forgot to update in 0.7.1 so that version gave compilation errors.
      NOTE: if upgrading from 0.7.0 or older to 0.7.1 or newer, you need to patch the included "retry_unpatch.asm" file with Asar BEFORE running UberASM Tool with the new Retry version, or the game will crash.

v0.7.1:
    - Removed "level_end_frame.asm" and the "gm14_end" routine in "extra.asm", as they're now obsoleted by the UberASM Tool 2.0 "end" label (2.0 is required to insert Retry from this version onwards).
    - Fixed issue from the previous version where the sprite status bar coin tile could be glitched.

v0.7.0:
    - Fixed the !no_score_sprites_on_death option so it doesn't erase score sprites if the prompt is not enabled in the level.
    - Changed sprite status bar configuration to use ram addresses instead of tables, and removed the "sprite_status_bar_tables.asm" file. You can now enable and configure the status bar items using the "retry_api_configure_sprite_status_bar" API function. See "docs/api.html" for more information.