@@ -266,7 +266,7 @@ table tr td:nth-child(1) code {
 		<code>!room_cp_sfx_addr = $1DF9</code>
 	</p>
 	<ul>
-		<li>SFX to play when getting a checkpoint through a room transition (<code>!room_cp_sfx = $00</code> -> no SFX). This is meant as a way to inform the player that they just got a room checkpoint. If enabled, you can disable it in specific sublevels: see <a href="./settings_local.html#disable_room_cp_sfx">Local Settings - %disable_room_cp_sfx</a>.</li>
+		<li>SFX to play when getting a checkpoint through a room transition (<code>!room_cp_sfx = $00</code> -> no SFX). This is meant as a way to inform the player that they just got a room checkpoint. If enabled, you can disable it in specific sublevels: see <a href="./settings_local.html#no_room_cp_sfx">Local Settings - %no_room_cp_sfx</a>.</li>
 	</ul>
 
 	<p>
