@@ -24,9 +24,9 @@
 		<li><a href="#checkpoint_retry">%checkpoint_retry(level, checkpoint, retry)</a></li>
 		<li><a href="#sfx_echo">%sfx_echo(level)</a></li>
 		<li><a href="#no_reset_rng">%no_reset_rng(level)</a></li>
-		<li><a href="#disable_room_cp_sfx">%disable_room_cp_sfx(level)</a></li>
+		<li><a href="#no_room_cp_sfx">%no_room_cp_sfx(level)</a></li>
 		<li><a href="#no_lose_lives">%no_lose_lives(level)</a></li>
-		<li><a href="#settings">%settings(level, checkpoint, retry, sfx_echo, no_reset_rng, disable_room_cp_sfx, no_lose_lives)</a></li>
+		<li><a href="#settings">%settings(level, checkpoint, retry, sfx_echo, no_reset_rng, no_room_cp_sfx, no_lose_lives)</a></li>
 	</ul>
 	<br/>
 
@@ -90,12 +90,12 @@
 	</ul>
 	<br/>
 
-<h3 id="disable_room_cp_sfx">%disable_room_cp_sfx(level)</h3>
+<h3 id="no_room_cp_sfx">%no_room_cp_sfx(level)</h3>
 	<p>If a level uses the checkpoint type <code>2</code> or <code>3</code>, then a SFX is played when the automatic checkpoint is triggered (the SFX is defined by <code>!room_cp_sfx</code> in <code>settings_global.asm</code>).</p>
 	<p>If you use this, then the automatic checkpoints in the specified sublevel won't have any SFX. If <code>!room_cp_sfx = 0</code>, you can ignore this.</p>
 	<p>Examples:</p>
 	<ul>
-		<li><code>%disable_room_cp_sfx($105)</code>: sublevel $105 won't have any SFX when getting an entrance checkpoint.</li>
+		<li><code>%no_room_cp_sfx($105)</code>: sublevel $105 won't have any SFX when getting an entrance checkpoint.</li>
 	</ul>
 	<br/>
 
@@ -108,7 +108,7 @@
 	</ul>
 	<br/>
 
-<h3 id="settings">%settings(level, checkpoint, retry, sfx_echo, no_reset_rng, disable_room_cp_sfx, no_lose_lives)</h3>
+<h3 id="settings">%settings(level, checkpoint, retry, sfx_echo, no_reset_rng, no_room_cp_sfx, no_lose_lives)</h3>
 	<p>This is a shorthand to configure all the settings for the specified level at the same time.</p>
 	<p>The arguments are:</p>
 	<ul>
@@ -117,7 +117,7 @@
 		<li><code>retry</code>: same as <code>value</code> in <code>%retry</code>.</li>
 		<li><code>sfx_echo</code>: if <code>0</code>, SFX echo is disabled in the sublevel. Otherwise, it is enabled.</li>
 		<li><code>no_reset_rng</code>: if <code>0</code>, RNG is reset when retrying in the sublevel. Otherwise, it is not reset.</li>
-		<li><code>disable_room_cp_sfx</code>: if <code>0</code>, automatic checkpoints in the sublevel will play the SFX. Otherwise, they won't play the SFX.</li>
+		<li><code>no_room_cp_sfx</code>: if <code>0</code>, automatic checkpoints in the sublevel will play the SFX. Otherwise, they won't play the SFX.</li>
 		<li><code>no_lose_lives</code>: if <code>0</code>, life loss is enabled in the sublevel (if infinite lives is disabled globally). Otherwise, it is disabled.</li>
 	</ul>
 
