@@ -5,8 +5,8 @@
 ; - %checkpoint_retry(level, checkpoint, retry)
 ; - %sfx_echo(level)
 ; - %no_reset_rng(level)
-; - %disable_room_cp_sfx(level)
+; - %no_room_cp_sfx(level)
 ; - %no_lose_lives(level)
-; - %settings(level, checkpoint, retry, sfx_echo, no_reset_rng, disable_room_cp_sfx, no_lose_lives)
+; - %settings(level, checkpoint, retry, sfx_echo, no_reset_rng, no_room_cp_sfx, no_lose_lives)
 ; For details, check out "docs/settings_local.html".
 
